target/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "';'", "','", 
                     "'='", "':'", "'..'", "'+'", "'*'", "'<>'", "'<'", 
                     "'<='", "'-'", "'/'", "'>'", "'>='", "':='" ]

    symbolicNames = [ "<INVALID>", "LB", "RB", "LQ", "RQ", "SEMI", "CM", 
                      "EQ", "COL", "DD", "ADD", "MUL", "NOTEQ", "LESSTN", 
                      "LESSEQ", "SUBNE", "DIVSI", "GRETN", "GREEQ", "ASSI", 
                      "BOOLLIT", "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", 
                      "DO", "IF", "THEN", "ELSE", "RETURN", "WHILE", "BEGIN", 
                      "END", "FUNCTION", "PROCEDURE", "VAR", "TRUE", "FALSE", 
                      "ARRAY", "OF", "REAL", "BOOLEAN", "INTEGER", "STRING", 
                      "NOT", "AND", "OR", "DIV", "MOD", "WITH", "WS", "ID", 
                      "INTLIT", "REALLIT", "STRINGLIT", "CMT", "BLKCMT", 
                      "TRACMT", "BLCMT", "LINECMT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_manydeclares = 1
    RULE_typee = 2
    RULE_primtype = 3
    RULE_arrtype = 4
    RULE_exp1 = 5
    RULE_exp2 = 6
    RULE_exp3 = 7
    RULE_exp4 = 8
    RULE_exp5 = 9
    RULE_exp6 = 10
    RULE_factor = 11
    RULE_varde = 12
    RULE_var_list = 13
    RULE_vartype = 14
    RULE_idlist = 15
    RULE_funcde = 16
    RULE_funcde1 = 17
    RULE_parade = 18
    RULE_parade1 = 19
    RULE_compostate = 20
    RULE_procede = 21
    RULE_procede1 = 22
    RULE_expression = 23
    RULE_indexexpre = 24
    RULE_expindex = 25
    RULE_expi = 26
    RULE_expi1 = 27
    RULE_expi2 = 28
    RULE_expi3 = 29
    RULE_expi4 = 30
    RULE_invoexpre = 31
    RULE_exprlist = 32
    RULE_manystatements = 33
    RULE_statement = 34
    RULE_semistatement = 35
    RULE_nomistatement = 36
    RULE_assignstate = 37
    RULE_assignstate1 = 38
    RULE_lhs = 39
    RULE_ifstate = 40
    RULE_whilestate = 41
    RULE_forstate = 42
    RULE_breakstate = 43
    RULE_contstate = 44
    RULE_stopstate = 45
    RULE_returnsate = 46
    RULE_returnexp = 47
    RULE_returnnoexp = 48
    RULE_parade2 = 49
    RULE_withstate = 50
    RULE_callstate = 51
    RULE_statelist = 52

    ruleNames =  [ "program", "manydeclares", "typee", "primtype", "arrtype", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "factor", 
                   "varde", "var_list", "vartype", "idlist", "funcde", "funcde1", 
                   "parade", "parade1", "compostate", "procede", "procede1", 
                   "expression", "indexexpre", "expindex", "expi", "expi1", 
                   "expi2", "expi3", "expi4", "invoexpre", "exprlist", "manystatements", 
                   "statement", "semistatement", "nomistatement", "assignstate", 
                   "assignstate1", "lhs", "ifstate", "whilestate", "forstate", 
                   "breakstate", "contstate", "stopstate", "returnsate", 
                   "returnexp", "returnnoexp", "parade2", "withstate", "callstate", 
                   "statelist" ]

    EOF = Token.EOF
    LB=1
    RB=2
    LQ=3
    RQ=4
    SEMI=5
    CM=6
    EQ=7
    COL=8
    DD=9
    ADD=10
    MUL=11
    NOTEQ=12
    LESSTN=13
    LESSEQ=14
    SUBNE=15
    DIVSI=16
    GRETN=17
    GREEQ=18
    ASSI=19
    BOOLLIT=20
    BREAK=21
    CONTINUE=22
    FOR=23
    TO=24
    DOWNTO=25
    DO=26
    IF=27
    THEN=28
    ELSE=29
    RETURN=30
    WHILE=31
    BEGIN=32
    END=33
    FUNCTION=34
    PROCEDURE=35
    VAR=36
    TRUE=37
    FALSE=38
    ARRAY=39
    OF=40
    REAL=41
    BOOLEAN=42
    INTEGER=43
    STRING=44
    NOT=45
    AND=46
    OR=47
    DIV=48
    MOD=49
    WITH=50
    WS=51
    ID=52
    INTLIT=53
    REALLIT=54
    STRINGLIT=55
    CMT=56
    BLKCMT=57
    TRACMT=58
    BLCMT=59
    LINECMT=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def manydeclares(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ManydeclaresContext)
            else:
                return self.getTypedRuleContext(MPParser.ManydeclaresContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.manydeclares()
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 111
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ManydeclaresContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varde(self):
            return self.getTypedRuleContext(MPParser.VardeContext,0)


        def funcde(self):
            return self.getTypedRuleContext(MPParser.FuncdeContext,0)


        def procede(self):
            return self.getTypedRuleContext(MPParser.ProcedeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_manydeclares

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManydeclares" ):
                return visitor.visitManydeclares(self)
            else:
                return visitor.visitChildren(self)




    def manydeclares(self):

        localctx = MPParser.ManydeclaresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydeclares)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.varde()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.funcde()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.procede()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def getRuleIndex(self):
            return MPParser.RULE_typee

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypee" ):
                return visitor.visitTypee(self)
            else:
                return visitor.visitChildren(self)




    def typee(self):

        localctx = MPParser.TypeeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typee)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.ARRAY) | (1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimtype" ):
                return visitor.visitPrimtype(self)
            else:
                return visitor.visitChildren(self)




    def primtype(self):

        localctx = MPParser.PrimtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_primtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LQ(self):
            return self.getToken(MPParser.LQ, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTLIT)
            else:
                return self.getToken(MPParser.INTLIT, i)

        def DD(self):
            return self.getToken(MPParser.DD, 0)

        def RQ(self):
            return self.getToken(MPParser.RQ, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primtype(self):
            return self.getTypedRuleContext(MPParser.PrimtypeContext,0)


        def SUBNE(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUBNE)
            else:
                return self.getToken(MPParser.SUBNE, i)

        def getRuleIndex(self):
            return MPParser.RULE_arrtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrtype" ):
                return visitor.visitArrtype(self)
            else:
                return visitor.visitChildren(self)




    def arrtype(self):

        localctx = MPParser.ArrtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(MPParser.ARRAY)
            self.state = 123
            self.match(MPParser.LQ)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBNE:
                self.state = 124
                self.match(MPParser.SUBNE)


            self.state = 127
            self.match(MPParser.INTLIT)
            self.state = 128
            self.match(MPParser.DD)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBNE:
                self.state = 129
                self.match(MPParser.SUBNE)


            self.state = 132
            self.match(MPParser.INTLIT)
            self.state = 133
            self.match(MPParser.RQ)
            self.state = 134
            self.match(MPParser.OF)
            self.state = 135
            self.primtype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self):
            return self.getTypedRuleContext(MPParser.Exp2Context,0)


        def exp1(self):
            return self.getTypedRuleContext(MPParser.Exp1Context,0)


        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp1" ):
                return visitor.visitExp1(self)
            else:
                return visitor.visitChildren(self)



    def exp1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Exp1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_exp1, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.exp2()
            self._ctx.stop = self._input.LT(-1)
            self.state = 152
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 150
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = MPParser.Exp1Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp1)
                        self.state = 140
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")

                        self.state = 141
                        self.match(MPParser.AND)
                        self.state = 142
                        self.match(MPParser.THEN)
                        self.state = 144
                        self.exp2()
                        pass

                    elif la_ == 2:
                        localctx = MPParser.Exp1Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp1)
                        self.state = 145
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")

                        self.state = 146
                        self.match(MPParser.OR)
                        self.state = 147
                        self.match(MPParser.ELSE)
                        self.state = 149
                        self.exp2()
                        pass

             
                self.state = 154
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp3(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Exp3Context)
            else:
                return self.getTypedRuleContext(MPParser.Exp3Context,i)


        def EQ(self):
            return self.getToken(MPParser.EQ, 0)

        def NOTEQ(self):
            return self.getToken(MPParser.NOTEQ, 0)

        def LESSTN(self):
            return self.getToken(MPParser.LESSTN, 0)

        def GRETN(self):
            return self.getToken(MPParser.GRETN, 0)

        def GREEQ(self):
            return self.getToken(MPParser.GREEQ, 0)

        def LESSEQ(self):
            return self.getToken(MPParser.LESSEQ, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp2" ):
                return visitor.visitExp2(self)
            else:
                return visitor.visitChildren(self)




    def exp2(self):

        localctx = MPParser.Exp2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_exp2)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.exp3(0)
                self.state = 156
                self.match(MPParser.EQ)
                self.state = 157
                self.exp3(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.exp3(0)
                self.state = 160
                self.match(MPParser.NOTEQ)
                self.state = 161
                self.exp3(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.exp3(0)
                self.state = 164
                self.match(MPParser.LESSTN)
                self.state = 165
                self.exp3(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 167
                self.exp3(0)
                self.state = 168
                self.match(MPParser.GRETN)
                self.state = 169
                self.exp3(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 171
                self.exp3(0)
                self.state = 172
                self.match(MPParser.GREEQ)
                self.state = 173
                self.exp3(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 175
                self.exp3(0)
                self.state = 176
                self.match(MPParser.LESSEQ)
                self.state = 177
                self.exp3(0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 179
                self.exp3(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp4(self):
            return self.getTypedRuleContext(MPParser.Exp4Context,0)


        def exp3(self):
            return self.getTypedRuleContext(MPParser.Exp3Context,0)


        def ADD(self):
            return self.getToken(MPParser.ADD, 0)

        def SUBNE(self):
            return self.getToken(MPParser.SUBNE, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp3

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp3" ):
                return visitor.visitExp3(self)
            else:
                return visitor.visitChildren(self)



    def exp3(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Exp3Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_exp3, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.exp4(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 196
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 194
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = MPParser.Exp3Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp3)
                        self.state = 185
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 186
                        self.match(MPParser.ADD)
                        self.state = 187
                        self.exp4(0)
                        pass

                    elif la_ == 2:
                        localctx = MPParser.Exp3Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp3)
                        self.state = 188
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 189
                        self.match(MPParser.SUBNE)
                        self.state = 190
                        self.exp4(0)
                        pass

                    elif la_ == 3:
                        localctx = MPParser.Exp3Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp3)
                        self.state = 191
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 192
                        self.match(MPParser.OR)
                        self.state = 193
                        self.exp4(0)
                        pass

             
                self.state = 198
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp5(self):
            return self.getTypedRuleContext(MPParser.Exp5Context,0)


        def exp4(self):
            return self.getTypedRuleContext(MPParser.Exp4Context,0)


        def DIVSI(self):
            return self.getToken(MPParser.DIVSI, 0)

        def MUL(self):
            return self.getToken(MPParser.MUL, 0)

        def MOD(self):
            return self.getToken(MPParser.MOD, 0)

        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def DIV(self):
            return self.getToken(MPParser.DIV, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp4

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp4" ):
                return visitor.visitExp4(self)
            else:
                return visitor.visitChildren(self)



    def exp4(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Exp4Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_exp4, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            self.exp5()
            self._ctx.stop = self._input.LT(-1)
            self.state = 219
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 217
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = MPParser.Exp4Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp4)
                        self.state = 202
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 203
                        self.match(MPParser.DIVSI)
                        self.state = 204
                        self.exp5()
                        pass

                    elif la_ == 2:
                        localctx = MPParser.Exp4Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp4)
                        self.state = 205
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 206
                        self.match(MPParser.MUL)
                        self.state = 207
                        self.exp5()
                        pass

                    elif la_ == 3:
                        localctx = MPParser.Exp4Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp4)
                        self.state = 208
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 209
                        self.match(MPParser.MOD)
                        self.state = 210
                        self.exp5()
                        pass

                    elif la_ == 4:
                        localctx = MPParser.Exp4Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp4)
                        self.state = 211
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 212
                        self.match(MPParser.AND)
                        self.state = 213
                        self.exp5()
                        pass
